# nix-pkgs-generator

./: .gitignore  Readme.markdown  build.nix  config.yaml  default.nix  hackage-revision.txt  hackage.hs  nix-pkgs-generator.cabal  packages.yaml  repo.yaml  shell.nix
nix/: docker.nix  lib.nix  versions.json
nix/pkgs/docker/: base.nix
sh/: extract-cabal.sh
