Cabal-Version:  2.2
Name:           nix-pkgs-generator
Version:        0.1
Synopsis:       Generator of nix overlay from YAML description

License:        MPL-2.0
License-File:   LICENSE
Copyright:      2022 АНО Сириус-Курсы, 2023 Alexey Khudyakov
Maintainer:     XXX
Category:       Nix
Build-Type:     Simple

executable nix-pkgs-generator
  Ghc-options:      -Wall
  Default-Language: Haskell2010
  main-is:          hackage.hs
  Build-Depends:    base
                  , PyF         >=0.10
                  , aeson       >=2
                  , binary
                  , containers  >=0.5
                  , deepseq     >=1.4
                  , hashable    >=1.3
                  , shake       >=0.19
                  , split       >=0.2
                  , yaml        >=0.11
